--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:hjm="http://schemas.android.com/apk/res-auto"
-    xmlns:RelativeLayoutxmlns="http://schemas.android.com/tools"
+    xmlns:SearchView="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,12 +13,20 @@
     android:layout_height="match_parent">
 
 
-
+    <km.lmy.searchview.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        SearchView:defaultState="open"
+        android:elevation="5dp"
+        SearchView:hintText="请输入关键字" />
 
       <android.support.design.widget.AppBarLayout
           android:id="@+id/appBar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
+
+
 
           <android.support.v7.widget.Toolbar
               android:id="@+id/toolbar"
