--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -63,7 +63,9 @@
                     android:id="@+id/information_content_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"/>
+                    android:layout_margin="10dp"
+                    android:textSize="15dp"
+                    android:lineSpacingExtra="5dp"/>
             </android.support.v7.widget.CardView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
@@ -71,11 +73,14 @@
 
 
     <android.support.design.widget.FloatingActionButton
+       android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        app:elevation="8dp"
         app:layout_anchor="@id/appBar"
-        app:layout_anchorGravity="bottom|end"/>
+        app:layout_anchorGravity="bottom|end"
+         />
 
 </android.support.design.widget.CoordinatorLayout>
 
