--- a/app/src/main/res/layout/author_layout.xml
+++ b/app/src/main/res/layout/author_layout.xml
@@ -6,5 +6,5 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="版权由XDick-叉地克所有"/>
+        android:text="本应用由XDick-叉地克开发"/>
 </LinearLayout>
