--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -17,9 +17,10 @@
         android:id="@+id/searchView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        SearchView:defaultState="open"
         android:elevation="5dp"
-        SearchView:hintText="请输入关键字" />
+        SearchView:hintText="请输入关键字"
+
+        />
 
       <android.support.design.widget.AppBarLayout
           android:id="@+id/appBar"
@@ -33,7 +34,7 @@
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:background="?attr/colorPrimary"
-              android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+              android:theme="@style/ThemeOverlay.AppCompat.Light"
               app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
               app:layout_scrollFlags="enterAlways|scroll|snap"/>
       </android.support.design.widget.AppBarLayout>
@@ -43,10 +44,10 @@
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="55dp"
+
         app:layout_behavior="@string/appbar_scrolling_view_behavior"></FrameLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <!--<android.support.design.widget.FloatingActionButton
     android:id="@+id/fab"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -57,7 +58,7 @@
     app:elevation="20dp ">
 
 
-    </android.support.design.widget.FloatingActionButton>
+    </android.support.design.widget.FloatingActionButton>-->
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -72,17 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
-        <com.roughike.bottombar.BottomBar
-            android:id="@+id/bottomBar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            app:bb_behavior="shifting"
-            app:bb_tabXmlResource="@xml/bottombar_tabs"
-            >
 
-
-        </com.roughike.bottombar.BottomBar>
 
 
     </RelativeLayout>
