--- a/app/src/main/res/layout/fragment_layout1.xml
+++ b/app/src/main/res/layout/fragment_layout1.xml
@@ -5,13 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-    </android.support.design.widget.AppBarLayout>-->
 
 
         <android.support.v4.widget.SwipeRefreshLayout
@@ -24,7 +17,7 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#181818">
+                android:background="#e6e6e6">
 
             </android.support.v7.widget.RecyclerView>
 
