--- a/app/src/main/res/layout/information_item.xml
+++ b/app/src/main/res/layout/information_item.xml
@@ -5,9 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="5dp"
-    card_view:cardElevation="20"
-    app:cardBackgroundColor="#303034"
-    app:cardCornerRadius="8dp">
+    card_view:cardElevation="250"
+    app:cardBackgroundColor="#ffffff"
+    app:cardCornerRadius="4dp">
 
 
 
@@ -17,33 +17,43 @@
     android:layout_height="wrap_content">
 
 
-    <TextView
-        android:id="@+id/information_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
-        android:textSize="25sp"
-        android:textColor="#9c9b9b"/>
-
 
     <ImageView
         android:id="@+id/information_image"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
+
         />
+
+
+
+    <TextView
+        android:id="@+id/information_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginLeft="18dp"
+        android:textSize="19sp"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        />
+
+
 <TextView
     android:id="@+id/information_content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_margin="8dp"
-    android:textSize="13sp"
-    android:textColor="#9c9b9b"/>
+    android:layout_marginRight="15dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginBottom="10dp"
+    android:textSize="12.7sp"
+    android:textColor="#717171"
+    android:lineSpacingExtra="3.5dp"/>
 
 </LinearLayout>
 </android.support.v7.widget.CardView>
