--- a/app/src/main/res/layout/first.xml
+++ b/app/src/main/res/layout/first.xml
@@ -33,9 +33,8 @@
               android:id="@+id/toolbar"
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
-              android:background="?attr/colorPrimary"
-              android:theme="@style/ThemeOverlay.AppCompat.Light"
-              app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+              android:background="#226ecc"
+             
               app:layout_scrollFlags="enterAlways|scroll|snap"/>
       </android.support.design.widget.AppBarLayout>
 
