--- a/app/src/main/res/layout/web_layout.xml
+++ b/app/src/main/res/layout/web_layout.xml
@@ -5,5 +5,5 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="数据由中国历史网(www.gs5000.cn)所有"/>
+    android:text="数据由中国历史故事网(www.gs5000.cn)所有"/>
 </android.support.constraint.ConstraintLayout>
